# embtest

./: .gitignore  .run_gemma4_remaining.py  README.md  all_models_summary.json  audit_downloads.py  audit_tied_redundancy.py  cleanup_redundant.py  get_model_useful.py  model_tied_matrix_summary.json  model_tied_untied_audit.json  models.yaml  pyproject.toml  requirements.txt
__tep/: README.md
__tep/affine/: INSIGHTS.md  README.md
__tep/data/: computed_stats.json  key_metrics.csv  pattern_checks.json
__tep/gcorr/: INSIGHTS.md  README.md  main_zh_neurips_full.tex
__tep/scripts/: README.md  augment_w_rank_budget_raw_scale.py  compute_affine_pred_delta_svd.py  evaluate_affine_effective_subspace.py  evaluate_hybrid_affine_w_budget.py  evaluate_pred_delta_common_spectrum.py  evaluate_w_rank_budget.py  verify_metrics.py
analysis_1/: DATA.md  MANIFEST.json  README.md
analysis_1/configs/: analysis_subsets.yaml  base_instruct_pairs.yaml  bi_pairs.yaml
analysis_1/docs/: SPECIAL_CASES.md
analysis_1/notes/: 01_untied_u_vs_e_static_spectrum.md  02_tied_static_spectrum_like_u.md  (+2 more)
analysis_eu_geometry/: README.md
bi_analysis/: README.md  bi_pairs.yaml
configs/: affine_pairs.yaml  base_instruct_pairs.yaml  cross_scale_groups.yaml  model_series.yaml  models.yaml  moe_cross_family.yaml
cross_model_geometry/: README.md
docs/: ANALYSIS_SCOPES_AND_SPECIAL_CASES.md  分析口径与特殊案例.md  功能分析口径.md  项目实验报告与工作区导航.md
ijcai_clean/: .gitignore  MANIFEST.md  README.md  analysis.md
tools/: README.md  audit.py  cleanup_redundant.py  get_model_useful.py  paths.py
(+553 files in other folders)
